2008-10-10 [paul]	0.21.0

	0.21 released

2008-10-04 [colin]	0.20.0cvs2

	* src/claws.def
		Fix symbols

2008-10-04 [colin]	0.20.0cvs1

	* src/gtkhtml2_viewer.c
		Win32: set translation dir

2008-10-03 [paul]	0.20.0

	0.20 released

2008-10-03 [paul]	0.19.0cvs12

	* configure.ac
	* po/ru.po
		added by Aleksei Miheev
	* po/ca.po
	* po/fi.po
	* po/fr.po
	* po/hu.po
		updated by Miquel Oliete, Flammie Pirinen,
		Colin Leroy, Pader Rezo

2008-09-27 [colin]	0.19.0cvs11

	* src/gtkhtml2_viewer.c
		Windows port

2008-09-26 [colin]	0.19.0cvs10

	* configure.ac
	* src/Makefile.am
	* src/claws.def
	* src/gtkhtml2_viewer.c
	* src/plugin.def
	* src/version.rc
		Prepare for Win32 port

2008-09-17 [colin]	0.19.0cvs9

	* src/gtkhtml2_viewer.c
		Fix off-by-one; maybe fixes bug 1719, 'cm crashes 
		on touching html message'

2008-09-09 [paul]	0.19.0cvs8

	* src/gtkhtml2_viewer.c
		fix build with GTK+ 2.13.0 or lower

2008-09-09 [colin]	0.19.0cvs7

	* src/gtkhtml2_viewer.c
	* libgtkhtml/gtkhtmlcontext.c
	* libgtkhtml/gtkhtmlcontext.h
	* libgtkhtml/a11y/htmlboxaccessible.h
	* libgtkhtml/a11y/htmlviewaccessible.h
	* libgtkhtml/document/htmldocument.h
	* libgtkhtml/document/htmlparser.c
	* libgtkhtml/document/htmlparser.h
	* libgtkhtml/graphics/htmlpainter.c
	* libgtkhtml/layout/html/htmlboxembedded.c
	* libgtkhtml/layout/html/htmlboximage.c
	* libgtkhtml/test/testgtkhtml.c
	* libgtkhtml/view/htmlview.c
	* libgtkhtml/view/htmlview.h
		Undeprecate for GTK+ 2.14

2008-08-21 [colin]	0.19.0cvs6

	* libgtkhtml/css/cssmatcher.c
		Fix crasher on background image url(none)
	* libgtkhtml/layout/html/htmlboximage.c
		Maybe fix strange crash
		

2008-08-17 [colin]	0.19.0cvs5

	* src/gtkhtml2_viewer.c
		Warning fix

2008-08-07 [colin]	0.19.0cvs4

	* src/gtkhtml2_viewer.c
	* libgtkhtml/dom/html/dom-htmlselectelement.c
	* libgtkhtml/graphics/htmlcolor.c
	* libgtkhtml/graphics/htmlgdkpainter.c
	* libgtkhtml/layout/htmllinebox.c
	* libgtkhtml/layout/html/htmlboxembeddedentry.c