@@ -113,3 +113,4 @@
 ( cvs diff -u -r 1.1.2.144 -r 1.1.2.145 configure.ac;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 po/ca.po;  cvs diff -u -r 1.1.2.9 -r 1.1.2.10 po/fi.po;  cvs diff -u -r 1.1.2.5 -r 1.1.2.6 po/fr.po;  cvs diff -u -r 1.1.2.7 -r 1.1.2.8 po/hu.po;  diff -u /dev/null po/ru.po;  ) > 0.19.0cvs12.patchset
 ( cvs diff -u -r 1.1.2.79 -r 1.1.2.80 src/gtkhtml2_viewer.c;  ) > 0.20.0cvs1.patchset
 ( cvs diff -u -r 1.1.2.1 -r 1.1.2.2 src/claws.def;  ) > 0.20.0cvs2.patchset
+( cvs diff -u -r 1.1.2.80 -r 1.1.2.81 src/gtkhtml2_viewer.c;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 libgtkhtml/graphics/htmlimagefactory.c;  ) > 0.21.0cvs1.patchset
